--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <h1>sifat is good boy</h1>
   <h3>This is heading</h3>
+
+  <p>Sifat is not good student</p>
+  <i>Padma Brig is dangerous </i>
   
 </body>
 </html>
