--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
   <p>Sifat is not good student</p>
   <i>Padma Brig is dangerous </i>
+
+  <div class="div"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+
   
 </body>
 </html>
