--- a/index.html
+++ b/index.html
@@ -20,6 +20,43 @@
     <p>Because, Our country has many river</p>
   </div>
 
+  <div class="sifat"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+  <div class="sifat"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+  <div class="sifat"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+  <div class="sifat"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+  <div class="sifat"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+  <div class="sifat"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+  <div class="sifat"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+  <div class="sifat"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+  <div class="sifat"> 
+    <h2>Bangladesh is a beautiful country</h2>
+    <p>Because, Our country has many river</p>
+  </div>
+
   
 </body>
 </html>
