--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <p>Because, Our country has many river</p>
   </div>
 
+  <img src="04-git.png" alt="">
+  <img src="bg-img.jpg" alt="">
+
   
 </body>
 </html>
